--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import 'sematic-extra.css';
+
 body {
   margin: 0;
   padding: 0;
@@ -11,4 +13,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.device-desktop .mobile,
+.device-mobile .desktop {
+  display: none !important;
 }
