added justify-content to mentor-card

--- a/src/sematic-extra.css
+++ b/src/sematic-extra.css
@@ -16,3 +16,11 @@ button.tertiary {
   left: 0.48571429em;
   right: auto;
 }
+
+.ui.card.mentor-card {
+  justify-content: space-between;
+}
+
+.ui.card.mentor-card:after {
+  display: none;
+}
