Handled responsiveness for screens of width 2560px (way too bigger screens)

--- a/src/sematic-extra.css
+++ b/src/sematic-extra.css
@@ -30,3 +30,9 @@ button.tertiary {
     margin: auto 10px;
   }
 }
+
+@media (min-width: 1441px) and (max-width: 2560px) {
+  .ui .cards {
+    margin: 10rem 10rem;
+  }
+}
