--- a/src/sematic-extra.css
+++ b/src/sematic-extra.css
@@ -27,12 +27,12 @@ button.tertiary {
 
 @media (min-width: 1025px) and (max-width: 1440px) {
   .ui .cards {
-    margin: auto 10px;
+    margin: 1rem;
   }
 }
 
 @media (min-width: 1441px) and (max-width: 2560px) {
   .ui .cards {
-    margin: 10rem 10rem;
+    margin: 1rem;
   }
 }
