--- a/src/sematic-extra.css
+++ b/src/sematic-extra.css
@@ -25,7 +25,11 @@ button.tertiary {
   display: none;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) and (max-width: 2560px) {
+  .ui .cards {
+    margin: 1rem;
+  }
+}
   .ui .cards {
     margin: 1rem;
   }
