--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,8 +1,11 @@
+aside {
+  width: 265px;
+}
+
 #filter {
   background-color: rgba(105, 213, 177, 0.3);
   color: #4a4a4a;
   font-size: 1.5em;
   text-transform: uppercase;
   padding: 15px 0px 15px 30px;
-  width: 265px;
 }
