--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -1,5 +1,8 @@
 .mentors-wrapper {
   margin-top: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
+  flex-grow: 1;
 }
 
 .device-desktop .mentors-wrapper {
