--- a/src/components/AutoComplete/AutoComplete.css
+++ b/src/components/AutoComplete/AutoComplete.css
@@ -27,6 +27,8 @@
   max-height: 150px;
   overflow: auto;
   background: #fff;
+  border: 1px solid rgba(155, 155, 155, 0.5);
+  border-top: 0;
 }
 
 .ac .ac-item {
