--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -1,13 +1,12 @@
 .mentors-wrapper {
-  margin-top: 15px;
   padding-right: 10px;
   padding-left: 10px;
-  flex-grow: 1;
 }
 
-.device-desktop .mentors-wrapper {
-  margin-right: 1rem;
-  margin-left: 1rem;
+.mentors-wrapper > .mentors-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .device-mobile .mentors-wrapper {
