filter position fixed + animate

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,9 @@
-:root {
-  --tag-color: #6ad4b0;
-}
-
 body {
   font-family: "Lato", sans-serif;
 }
 
 main {
-  display: flex;
+  padding-left: var(--filter-width);
 }
 
 .device-desktop .filters-outer {
