--- a/src/components/AutoComplete/AutoComplete.css
+++ b/src/components/AutoComplete/AutoComplete.css
@@ -1,34 +1,23 @@
-.search-wrapper {
-  position: relative;
-  margin: 10px 0;
-}
-
-.device-desktop .search-wrapper {
-  display: inline-block;
-}
-
-.device-desktop .search-wrapper:not(:last-child) {
-  margin-right: 5px;
-}
-
-.device-mobile .search-input > .input {
-  display: flex;
-}
-
 .ac .highlight {
   background: rgba(105, 213, 177, 0.3);
 }
 
 .ac .ac-menu {
   position: absolute;
-  z-index: 11;
-  left: 15px;
-  width: calc(100% - 15px);
+  z-index: 1;
+  left: var(--filter-input-offset);
+  width: calc(100% - var(--filter-input-offset));
   max-height: 150px;
   overflow: auto;
   background: #fff;
   border: 1px solid rgba(155, 155, 155, 0.5);
   border-top: 0;
+}
+
+@media all and (max-width: 576px) {
+  .ac .ac-menu {
+    width: calc(100% - var(--filter-input-offset) * 2);
+  }
 }
 
 .ac .ac-item {
