--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -4,70 +4,22 @@
   flex-grow: 1;
 }
 
+@media all and (max-width: 576px) {
+  .mentors-wrapper {
+    position: relative;
+    background: #fff;
+    transform: translateY(0);
+    transition: transform .3s ease;
+  }
+
+  .mentors-wrapper.active {
+    transform: translateY(120px);
+    margin-bottom: 50px;
+  }
+}
+
 .mentors-wrapper > .mentors-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.device-mobile .mentors-wrapper {
-  transform: translateY(-105px);
-  transition: transform .3s ease;
-}
-
-.device-mobile .mentors-wrapper.active {
-  transform: translateY(0);
-}
-
-.device-mobile .mentors-wrapper > .mentors-cards {
-  margin: 0;
-  padding: 0 20px;
-}
-
-.device-desktop .mentor-card.mentor-card.mentor-card {
-  width: 350px;
-}
-
-.device-mobile .mentor-card.mentor-card.mentor-card {
-  width: 100%;
-  margin-right: 0;
-  margin-left: 0;
-}
-
-.mentor-card header {
-  display: flex;
-}
-
-.mentor-card .details {
-  padding: .35em 1em;
-}
-
-.mentor-card .tags {
-  margin-bottom: -8px;
-}
-
-.mentor-card .description {
-  /* 2 lines min */
-  height: 38px;
-}
-
-.mentor-card img {
-  height: 100px;
-}
-
-.mentor-card .mentor-tag {
-  border-radius: 0;
-  background-color: #68d5b1;
-  color: #fff;
-  margin: .14285714em;
-  text-transform: lowercase;
-}
-
-.mentor-card .mentor-quote {
-  color: #68d5b1;
-}
-
-.ui.button.channel-link {
-  padding-right: 0;
-  padding-left: 0;
 }
