Fixed the issue not hidding all filters by default

--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -7,6 +7,11 @@
   margin-left: 1rem;
 }
 
+.device-mobile .mentors-wrapper {
+  transform: translateY(-150px);
+  transition: transform .3s ease;
+}
+
 .device-mobile .mentors-wrapper.active {
   transform: translateY(0);
 }
