--- a/src/components/SocialLinks/SocialLinks.css
+++ b/src/components/SocialLinks/SocialLinks.css
@@ -1,5 +1,10 @@
 .social-link {
   margin: 0px 10px;
+  transition: opacity 255ms ease;
+}
+
+.social-link:hover {
+  opacity: .8;
 }
 
 @media all and (max-width: 576px) {
