--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -76,6 +76,13 @@
   padding: 5px 10px;
   margin: 0 2.5px 5px;
   line-height: 1;
+
+  /** Prevent text selection */
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
 .card .channels {
