Remove channel label and enlarge icons

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -108,6 +108,7 @@
 .card .channels a .icon {
   transition: transform .3s ease;
   transform-origin: 50%;
+  font-size: 17px;
 }
 
 .card .channels a:hover .icon {
