--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -60,7 +60,10 @@
 
 .card .description {
   font-style: italic;
+  background: rgba(21,21,21,.01);
   margin-bottom: 5px;
+  padding: 5px 2.5px;
+  border-radius: 10px;
 }
 
 .card .tags {
