--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -14,7 +14,7 @@
 }
 
 .toggle-filter i {
-  transition: transform .15s ease;
+  transition: transform 0.15s ease;
 }
 
 .toggle-filter i.show-filters {
@@ -27,15 +27,12 @@
     left: 0;
     width: 100%;
   }
+  .filter-wrapper {
+    order: 2;
+  }
 }
 
 @media all and (min-width: 577px) {
-  aside {
-    position: fixed;
-    left: 0;
-    width: var(--filter-width);
-  }
-
   .toggle-filter {
     display: none;
   }
