--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -1,20 +1,26 @@
 .mentors-wrapper {
-  padding-right: 10px;
-  padding-left: 10px;
-  flex-grow: 1;
+  padding-bottom: 30px;
+  max-height: calc(100vh - 50px);
+  overflow: auto;
 }
 
 @media all and (max-width: 576px) {
+  main {
+    flex-direction: column;
+  }
+
   .mentors-wrapper {
     position: relative;
     background: #fff;
     transform: translateY(0);
-    transition: transform .3s ease;
+    transition: transform 0.3s ease;
+    max-height: calc(100vh - 370px);
   }
 
   .mentors-wrapper.active {
     transform: translateY(190px);
     margin-bottom: 50px;
+    max-height: calc(100vh - 550px);
   }
 }
 
@@ -22,6 +28,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  overflow: auto;
+  margin-top: 30px;
 }
 
 .nothing-to-show {
