--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,3 +1,9 @@
+#mentorCount {
+  font-size: 0.65em;
+  padding-left: 0.5em;
+  font-weight: 400;
+}
+
 #filter {
   background-color: rgba(105, 213, 177, 0.3);
   color: #4a4a4a;
