--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -28,5 +28,6 @@
 @media all and (max-width: 576px) {
   .input {
     width: calc(100% - var(--filter-input-offset) * 2);
+    font-size: 16px;
   }
 }
