--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -27,7 +27,7 @@
   transform: rotateZ(90deg);
 }
 
-@media all and (max-width: 576px) {
+@media all and (max-width: 580px) {
   .inputs {
     position: absolute;
     left: 0;
@@ -38,8 +38,15 @@
   }
 }
 
-@media all and (min-width: 577px) {
+@media all and (min-width: 580px) {
   .toggle-filter {
     display: none;
+  }
+  /* Set the sidebar to fixed position */
+  /* Position the sidebar at the top of the page */
+  .sidebar {
+    order: 2;
+    position: fixed;
+    top: 0;
   }
 }
