Missed part of the CSS changes to fix sticky filter area.

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,6 @@
 .card {
   --avatar-offset: 54px;
   --avatar-dim: 108px;
-
   display: flex;
   flex-direction: column;
   width: 280px;
@@ -134,7 +133,13 @@
   cursor: pointer;
 }
 
-.card .like-button .liked,
-.card .like-button:hover i {
+.card .like-button .liked, .card .like-button:hover i {
   color: #db2828;
+}
+
+@media all and (max-width: 580px) {
+  .card {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
