--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -133,7 +133,7 @@
   cursor: pointer;
 }
 
-.card .like-button .liked, .card .like-button:hover i {
+.card .liked, .card .like-button:hover i {
   color: #db2828;
 }
 
