--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,11 +5,11 @@
   flex-direction: column;
   width: 280px;
   padding: 0 32px;
-  border-radius: 2px;
+  border-radius: 5px;
   text-align: center;
   position: relative;
   border: 1px solid #ccc;
-  margin-top: calc(var(--avatar-offset) + 10px);
+  margin-top: calc(var(--avatar-offset) + 20px);
   margin-right: 5px;
   margin-left: 5px;
 }
@@ -34,7 +34,7 @@
   background: #fff;
   color: rgb(155, 155, 155);
   border-radius: 50%;
-  box-shadow: 0 0 10px 0;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
   display: block;
 }
 
@@ -60,7 +60,10 @@
 
 .card .description {
   font-style: italic;
+  background: rgba(21,21,21,.01);
   margin-bottom: 5px;
+  padding: 5px 2.5px;
+  border-radius: 10px;
 }
 
 .card .tags {
@@ -76,6 +79,7 @@
   padding: 5px 10px;
   margin: 0 2.5px 5px;
   line-height: 1;
+  user-select: none;
   text-transform: lowercase;
 }
 
@@ -96,6 +100,7 @@
 
 .card .channels a {
   color: #9b9b9b;
+  text-decoration: none;
 }
 
 .card .channels a .icon {
