--- a/src/components/Switch/Switch.css
+++ b/src/components/Switch/Switch.css
@@ -28,11 +28,12 @@
   text-indent: -9999px;
   width: 60px;
   height: 30px;
-  background: grey;
+  background-color: grey;
   display: block;
   border-radius: 100px;
   position: relative;
   top: -25px;
+  transition: background-color 0.35s ease-in-out;
 }
 
 .switch-input label:after {
@@ -44,18 +45,14 @@
   height: 20px;
   background: #fff;
   border-radius: 20px;
-  transition: 0.3s;
+  transition: left 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .switch-input input:checked + label {
-  background: var(--tag-color);
+  background-color: var(--tag-color);
 }
 
 .switch-input input:checked + label:after {
   left: calc(100% - 5px);
   transform: translateX(-100%);
-}
-
-.switch-input label:active:after {
-  width: 130px;
 }
