--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -57,6 +57,17 @@ footer a:hover {
   text-decoration: underline;
 }
 
+.patreon-link {
+  display: block;
+  margin: 20px auto 0;
+  max-width: 150px;
+}
+
+.patreon-link img {
+  width: 100%;
+  height: auto;
+}
+
 @media all and (max-width: 576px) {
   .logo {
     display: flex;
