fix modal style for mobile and tablet

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -24,7 +24,8 @@
 
 .modal-container .modal-box {
   background: #fff;
-  width: 780px;
+  max-width: 780px;
+  width: 95%;
   min-height: 100px;
   border-radius: 5px;
   margin: 300px auto;
@@ -64,4 +65,20 @@
 }
 .modal-container .modal-box .modal-content {
   padding: 15px 25px;
+}
+
+
+@media all and (max-width: 800px) {
+  .modal-container .modal-box {
+    padding: 5px;
+  }
+  .modal-container.active .modal-box {
+    margin: 50px auto;
+  }
+  .modal-container .modal-box .modal-head h2 {
+    padding: 15px;
+  }
+  .modal-container .modal-box .modal-content {
+    padding: 5px 15px;
+  }
 }
