--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 280px;
-  padding: 0 32px;
+  padding: 0 20px;
   border-radius: 5px;
   text-align: center;
   position: relative;
@@ -15,9 +15,11 @@
 }
 
 .card .country {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+  padding-top: 10px;
+  color: #4a4a4a;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .card .avatar {
@@ -137,9 +139,6 @@
 }
 
 .card .like-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
   background: none;
   border: none;
   cursor: pointer;
