implement modal for mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -56,7 +56,7 @@ main {
 @media all and (max-width: 576px) {
   .sidebar-nav {
     position: relative;
-    display: flex;
+    display: none;
     padding: 0px;
     justify-content: space-evenly;
     margin-top: 30px;
