--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -33,6 +33,18 @@
   transition: all 0.4s ease-in-out;
 }
 
+@media all and (max-width: 576px) {
+  .modal-container .modal-box {
+    background: #fff;
+    width: 99vw;
+    min-height: 100px;
+    border-radius: 5px;
+    margin: 10px auto;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+  }
+}
+
 .modal-container.active .modal-box {
   margin: 100px auto;
   opacity: 1;
@@ -64,4 +76,5 @@
 }
 .modal-container .modal-box .modal-content {
   padding: 15px 25px;
+  color: #000022;
 }
