--- a/src/components/SocialLinks/SocialLinks.css
+++ b/src/components/SocialLinks/SocialLinks.css
@@ -16,6 +16,10 @@
 }
 
 @media all and (max-width: 576px) {
+  .social-wrapper {
+    margin-top: 10px;
+  }
+
   .social-link {
     margin: 0 5px;
   }
