--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -13,9 +13,24 @@
   margin-left: 5px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
+.card .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 17px;
+}
+
+.card .location i {
+  margin-right: 5px;
+}
+
+.card .location p {
+  margin: 0;
+  margin-top: 2px;
+}
 
 .card .country {
-  color: #4a4a4a;
+  color: hsl(0, 0%, 29%);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -32,7 +47,7 @@
   font-size: var(--avatar-dim);
   width: var(--avatar-dim);
   height: var(--avatar-dim);
-  background: #fff;
+  background: hsl(0, 0%, 100%);
   color: rgb(155, 155, 155);
   border-radius: 50%;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
@@ -50,13 +65,13 @@
 }
 
 .card .name {
-  color: #4a4a4a;
+  color: hsl(0, 0%, 29%);
   font-size: 20px;
   margin: 0 0 5px;
 }
 
 .card .title {
-  color: #999;
+  color: hsl(0, 0%, 29%);
   margin: 0 0 5px;
   font-weight: 400;
 }
@@ -78,7 +93,7 @@
 }
 
 .card .tag {
-  color: #fff;
+  color: hsl(0, 0%, 100%);
   background: #16385c;
   border: 0;
   border-radius: 20px;
@@ -115,7 +130,7 @@
   position: absolute;
   bottom: 60px;
   left: 0;
-  background-color: white;
+  background-color: hsl(0, 0%, 100%);
   height: 30px;
   width: 100%;
   border-bottom-left-radius: 100%;
@@ -162,7 +177,7 @@
 
 .card .liked,
 .card .like-button:hover i {
-  color: #db2828;
+  color: hsl(0, 71%, 51%);
 }
 
 @media all and (max-width: 575.98px) {
