make sidebar responsive so that bottom nav show correctly

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -111,3 +111,9 @@ footer a:hover {
     display: block;
   }
 }
+
+@media screen and (max-width: 1280px) {
+  .logo {
+    margin: 10px auto;
+  }
+}
