--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -119,11 +119,11 @@
 
 .card .channels .channel-inner {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 
   background-color: #d0f8ef;
   align-items: center;
-  padding: 10px;
+  padding: 20px 10px 5px 10px;
   margin-right: -20px;
   margin-left: -20px;
 }
@@ -134,8 +134,7 @@
   background-color: hsl(0, 0%, 100%);
   height: 30px;
   width: 100%;
-  border-bottom-left-radius: 100%;
-  border-bottom-right-radius: 100%;
+  border-radius: 0% 0% 50% 50%;
 }
 
 .card .channels a {
