--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -3,6 +3,9 @@
 }
 
 .modal-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background: rgba(100,100,100,0.8);
   width: 100%;
   height: 100%;
@@ -10,7 +13,7 @@
   top: 0px;
   left: 0px;
   pointer-events: none;
-  overflow: scroll;
+  overflow: none;
   z-index: -1;
   opacity: 0;
   transition: all 0.2s ease-in-out;
@@ -26,12 +29,15 @@
   background: #fff;
   max-width: 780px;
   width: 95%;
+  /* height: 80vh; */
+  /* max-height: 80vh; */
   min-height: 100px;
   border-radius: 5px;
   margin: 300px auto;
   opacity: 0;
   position: relative;
   transition: all 0.4s ease-in-out;
+  overflow: hidden;
 }
 
 @media all and (max-width: 576px) {
@@ -76,10 +82,15 @@
   margin: 0px;
 }
 .modal-container .modal-box .modal-content {
-  padding: 15px 25px;
+  padding: 15px 25px 25px 25px;
   color: #000022;
+  overflow: hidden;
 }
-
+.scroll-helper {
+  height: calc(80vh - 200px);
+  overflow-y: scroll;
+  margin-bottom: 25px;
+}
 
 @media all and (max-width: 800px) {
   .modal-container .modal-box {
