--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -13,7 +13,6 @@
   top: 0px;
   left: 0px;
   pointer-events: none;
-  overflow: none;
   z-index: -1;
   opacity: 0;
   transition: all 0.2s ease-in-out;
@@ -29,8 +28,7 @@
   background: #fff;
   max-width: 780px;
   width: 95%;
-  /* height: 80vh; */
-  /* max-height: 80vh; */
+  max-height: 80vh;
   min-height: 100px;
   border-radius: 5px;
   margin: 300px auto;
