feat: clickable location tags to filter mentor list

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -32,10 +32,17 @@
 }
 
 .card .country {
+  background: transparent;
+  border: none;
+  cursor: pointer;
   color: hsl(0, 0%, 29%);
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.card .country:hover {
+  color: var(--tag-color);
 }
 
 .card .avatar {
