--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,5 +1,5 @@
 .modal-container {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   background: rgba(100,100,100,0.8);
@@ -18,6 +18,7 @@
   opacity: 1;
   z-index: 999;
   pointer-events: auto;
+  display: flex;
 }
 
 .modal-container .modal-box {
