--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -2,12 +2,14 @@
   main {
     flex-direction: column;
   }
+
   .mentors-wrapper {
     position: relative;
     background: #fff;
     transform: translateY(0);
     transition: transform 0.3s ease;
   }
+
   .mentors-wrapper.active {
     transform: translateY(300px);
     margin-bottom: 50px;
@@ -20,6 +22,7 @@
     margin-left: 276px;
     flex-grow: 1;
   }
+  
   .mentors-cards {
     display: flex;
     flex-wrap: wrap;
@@ -32,4 +35,5 @@
 .nothing-to-show {
   font-size: 20px;
   line-height: 1.6;
+  padding: 8px;
 }
