--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -3,8 +3,8 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   z-index: -1;
   opacity: 0;
   pointer-events: none;
