--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,13 +3,10 @@ body {
   overflow-x: hidden;
 }
 
-main {
-  display: flex;
-}
-
 .sidebar {
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .app {
@@ -40,7 +37,7 @@ main {
   list-style: none;
   padding-left: 20px;
   position: fixed;
-  bottom: 0px;
+  bottom: 0;
 }
 
 .sidebar-nav li {
@@ -48,13 +45,6 @@ main {
   color: #015d3e;
   text-decoration: none;
   cursor: pointer;
-}
-
-.auth {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
 }
 
 .patreon-link {
@@ -91,11 +81,11 @@ main {
     }
 }
 
-@media all and (max-width: 576px) {
+@media all and (max-width: var(--mq-mobile)) {
   .sidebar-nav {
     position: relative;
     display: none;
-    padding: 0px;
+    padding: 0;
     justify-content: space-evenly;
     margin-top: 30px;
   }
@@ -119,7 +109,7 @@ footer a:hover {
   text-decoration: underline;
 }
 
-@media all and (max-width: 576px) {
+@media all and (max-width: var(--mq-mobile)) {
   .logo {
     margin: 10px;
   }
