--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -1,4 +1,4 @@
-@media all and (max-width: 575.98px) {
+@media all and (max-width: var(--mq-mobile)) {
   main {
     flex-direction: column;
   }
@@ -14,10 +14,9 @@
   }
 }
 
-@media all and (min-width: 576px) {
+@media all and (min-width: var(--mq-mobile)) {
   .mentors-wrapper {
     padding-bottom: 30px;
-    margin-left: 276px;
     flex-grow: 1;
   }
   .mentors-cards {
@@ -25,7 +24,6 @@
     flex-wrap: wrap;
     justify-content: center;
     overflow-y: auto;
-    margin-top: 100px;
   }
 }
 
