--- a/src/components/AutoComplete/AutoComplete.css
+++ b/src/components/AutoComplete/AutoComplete.css
@@ -14,7 +14,7 @@
   border-top: 0;
 }
 
-@media all and (max-width: var(--mq-mobile)) {
+@media all and (max-width: 800px) {
   .ac .ac-menu {
     width: calc(100% - var(--filter-input-offset) * 2);
   }
