--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -191,7 +191,7 @@
   color: hsl(0, 71%, 51%);
 }
 
-@media all and (max-width: var(--mq-mobile)) {
+@media all and (max-width: 800px) {
   .card {
     margin-left: auto;
     margin-right: auto;
