--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -148,18 +148,34 @@
   border-radius: 0% 0% 50% 50%;
 }
 
-.card .channels a {
+.card .channels button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.card .channels a,
+.card .channels button {
   color: #16385c;
   text-decoration: none;
 }
 
-.card .channels a .icon {
+.card .channels a .icon,
+.card .channels button .icon {
   transition: transform 0.3s ease;
   transform-origin: 50%;
 }
 
 .card .channels a:hover .icon {
   transform: rotate(45deg);
+}
+
+.card .channels button:hover .icon {
+  transform: rotate(-90deg);
+}
+
+.card .channels button:active .icon {
+  transform: rotate(-110deg);
 }
 
 .card .channels a .type::first-letter {
